2011-02-07  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Xan Lopez.

        [Gtk] atk_text_get_caret_offset fails for list items
        https://bugs.webkit.org/show_bug.cgi?id=53436

        Consider list item markers when calculating the offset.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_text_get_caret_offset): Adjust the offset
        with the item marker's length for list items.
        (webkit_accessible_text_set_caret_offset): Replace usage of
        g_utf8_strlen() by calling to markerText.length().
2011-02-07  Mario Sanchez Prada  <msanchez@igalia.com>

        Reviewed by Xan Lopez.

        [Gtk] atk_text_get_caret_offset fails for list items
        https://bugs.webkit.org/show_bug.cgi?id=53436

        Update unit test to check the fix for this bug.

        * tests/testatk.c:
        (testWebkitAtkCaretOffsets): Check that the caret offset returned
        match the value previously set.

Canonical link: https://commits.webkit.org/67878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77817 268f45cc-cd09-0410-ab3c-d52691b4dbfc